--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "redux": "^4.0.5"
   }
 }
